# py-api-dumper

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  REUSE.toml  pyproject.toml  requirements-dev.txt
.github/workflows/: test.yml
src/py_api_dumper/: __init__.py  cli.py
test/: conftest.py  setup.py  test_diff.py  test_dump.py
test/api_ref/: __init__.py  _priv_mod.py  api_ref.txt  pub_mod.py
test/other_mod/: __init__.py
