[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-api-dumper"
description = "Python API dumping and comparison tool"
authors = [
    { name = "Karl Wette", email = "karl.wette@anu.edu.au" },
]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
license-files = ["LICENSES/MIT.txt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/kwwette/py-api-dumper"
Issues = "https://github.com/kwwette/py-api-dumper/issues"

[project.scripts]
py-api-dumper = "py_api_dumper.cli:cli"

[tool.setuptools.dynamic]
version = {attr = "py_api_dumper.__version__"}

[tool.ruff]
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
    "D1", "D2", "D4",
    "E4", "E7", "E9",
    "EM",
    "F",
    "I",
]
ignore = [
    "D105", "D202",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pydoclint]
style = "google"
allow-init-docstring = true
skip-checking-raises = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=py_api_dumper --cov-report=term-missing --cov-fail-under=100"
testpaths = ["test"]

[tool.ppqs.defaults]
print-header = true

[tool.ppqs.scripts.init]
description = "Initialise project"
script = """
python -m pip install -r requirements-dev.txt
pre-commit install
python -m pip install -e .
"""

[tool.ppqs.scripts.lint]
description = "Perform linting checks"
script = """
pre-commit run -a
"""

[tool.ppqs.scripts.build]
description = "Build project"
script = """
ppqs clean
python -m build
"""

[tool.ppqs.scripts.test]
description = "Run tests"
script = """
python -m pytest ...
"""

[tool.ppqs.scripts.upload]
description = "Upload package"
script = [
    ["ppqs", "test"],
    ["ppqs", "build"],
    ["twine", "upload", ["dist", "*"]],
    ["git", "push", "origin"],
    ["git", "push", "origin", "--tags"],
]

[tool.ppqs.scripts.clean]
description = "Clean up build files"
script = "git clean -Xdf"
